# OhCrabFinalProject

./: OhCrab presentation notes.md  README.md
OhCrabFinalProject/: .gitignore  Cargo.toml
OhCrabFinalProject/generated_worlds/: size128_seed420.json  size20_seed420.json  size40_seed420.json
OhCrabFinalProject/logs/: README.md
OhCrabFinalProject/src/: lib.rs  main.rs
OhCrabFinalProject/src/oh_crab_visualizer/: mod.rs
OhCrabFinalProject/src/oh_crab_visualizer/audio/: mod.rs
OhCrabFinalProject/src/oh_crab_visualizer/examples/: example.rs  example_robot.rs
OhCrabFinalProject/src/oh_crab_visualizer/visualizer/: draw_utils.rs  egui_utils.rs  mod.rs  visualizable_robot.rs  visualizer.rs  visualizer_debug.rs  visualizer_event_listener.rs
OhCrabFinalProject/src/robot_veronika/: distribution_robot.rs  mod.rs  robot_execution.rs
OhCrabFinalProject/src/robot_veronika/content_pick/: a_star_search.rs  collect.rs  mod.rs  path_search.rs  robot_search.rs
OhCrabFinalProject/src/robot_veronika/partitioning/: mod.rs
OhCrabFinalProject/src/robot_veronika/storage/: mod.rs
OhCrabFinalProject/src/world_gen_utils/: mod.rs
visualizer/: .gitignore  Cargo.toml
visualizer/generated_worlds/: size15_seed42.json  size256_seed420.json  size521_seed600.json
visualizer/src/: lib.rs  main.rs
visualizer/src/audio/: mod.rs
visualizer/src/examples/: example.rs  example_robot.rs
visualizer/src/history_cache/: mod.rs
visualizer/src/mock/: mock_robot.rs  mock_visualizer.rs  mock_world_generator.rs  mod.rs
visualizer/src/oh_crab_visualizer/audio/: mod.rs
visualizer/src/oh_crab_visualizer/examples/: example_robot.rs  mod.rs
visualizer/src/oh_crab_visualizer/visualizer/: visualizable_interfaces.rs  visualizer_event_listener.rs
visualizer/src/visualizer/: draw_utils.rs  dtos.rs  mod.rs  visualizable_interfaces.rs  visualizable_robot.rs  visualizer.rs  visualizer_event_listener.rs
visualizer/src/world_gen_utils/: mod.rs
