[package]
name = "visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotics_lib = { version = "0.1.21", registry = "kellnr" }
oxagaudiotool = { version = "0.2.0", registry = "kellnr" }
oxagworldgenerator = { version = "0.1.0",  registry = "kellnr"}
rizzler_rust_and_furious = { version = "0.1.0", registry = "kellnr"}
rstykrab_cache = { version ="0.1.0", registry = "kellnr"}